<resources>
    <string name="app_name">BaseWithMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="test">Test</string>
    <string name="show_loading">Show Loading</string>
    <string name="cancel_loading">Cancel Loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_list">Show List</string>
    <string name="list_demo">List Demo</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="close_menu">Close Menu</string>
    <string name="list_with_base_adapter">List with base adapter</string>
    <string name="base_adapter_demo">Base Adapter Demo</string>
    <string name="demo_list_media">Demo List Media</string>
    <string name="pager_demo">Pager Demo</string>
    <string name="input_here">Input Here</string>
    <string name="live_object_demo">Live Object Demo</string>
    <string name="dialog_full_blur">Dialog Full Blur</string>
    <string name="dialog_clip_blur">Dialog Clip Blur</string>
</resources>
