<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.lhd.view.basewithme.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.HomeFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnTest"
                    debounceClick="@{viewModel::onClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnShowLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:onClick="@{viewModel::onClick}"
                    android:text="@string/show_loading"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnListFragment"
                    debounceClick="@{viewModel::onClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/show_list"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnBaseAdapter"
                    debounceClick="@{viewModel::onClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/base_adapter_demo"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnPagerDemo"
                    debounceClick="@{viewModel::onClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/pager_demo"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnMediaDemo"
                    debounceClick="@{viewModel::onClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/demo_list_media"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnLiveObjectDemo"
                    debounceClick="@{viewModel::onClick}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/live_object_demo"
                    android:textAllCaps="false" />

            </LinearLayout>

        </ScrollView>


        <include
            anim_visible="@{viewModel.eventLoading.loading==true?View.VISIBLE:View.GONE}"
            layout="@layout/layout_loading"
            app:viewListener="@{viewListener}"
            app:viewModel="@{viewModel}"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>